--- a/Report3/home-test/contact.html
+++ b/Report3/home-test/contact.html
@@ -32,52 +32,37 @@
         <a class="navbar-brand" href="/home-test/projects.html">Projects</a>
         <a class="navbar-brand" href="/home-test/about.html">About</a>
         <a class="navbar-brand" href="/home-test/contact.html">Contact</a>
-        <a class="btn btn-primary" href="#" onclick="document.getElementById('id01').style.display='block'">Sign In</a>      </div>
+        <a class="btn btn-primary" href="#" onclick="document.getElementById('id01').style.display='block'">Sign In</a>
+      </div>
     </nav>
 
-    <!-- About Information -->
+    <!-- Contact Information -->
+
     <section class="testimonials text-center bg-light">
       <div class="container">
-        <h2 class="mb-5">About Us</h2>
+        <h2 class="mb-5">Contacts</h2>
         <div class="col-lg-4 order-lg-1 my-auto showcase-text">
-            <p>We are ... </p>
-          </div>
-          <div class="col-lg-11 order-lg-1 my-auto showcase-text">
-            <h3 center>Our Team</h3>
-          </div>
-        <div class="row">
-          <!-- Members -->
-          <div class="col-lg-6">
-            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
-              <h5>Margaret E.</h5>
-              <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p><p></p>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
-              <h5>Fred S.</h5>
-              <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p><p></p>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
-              <h5>Fred S.</h5>
-              <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p><p></p>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
-              <h5>Sarah	W.</h5>
-              <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p><p></p>
-            </div>
-          </div>
+            <p>Contac us on ... </p>
         </div>
-      </div>
+        <div class="col-lg-4 order-lg-1 my-auto showcase-text">
+            <h5>Contact Form</h5>
+        </div>
+        <div class="col-lg-0 order-lg-1 my-auto showcase-text">
+          <form action="action_page.php">
+            <label for="fname">First Name</label>
+            <input type="text" id="fname" name="firstname" placeholder="Your name.."><p></p>
+
+            <label for="lname">Last Name</label>
+            <input type="text" id="lname" name="lastname" placeholder="Your last name.."><p></p>
+
+             <label for="subject">Subject</label>
+             <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+             <input type="submit" value="Submit">
+          </form>
+        </div>
     </section>
+
 
     <!-- Call to Action -->
     <section class="call-to-action text-white text-center">
