--- a/Report3/home-test/index.html
+++ b/Report3/home-test/index.html
@@ -267,15 +267,15 @@ window.onclick = function(event) {
 
           <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
           <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-            <h2>Fully Responsive Design</h2>
-            <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
+            <!-- <h2>Fully Responsive Design</h2> -->
+            <p class="lead mb-0">This is an example of a ProPlan project. When creating you can choose the project's name, invite members and set up the privacy settings. This means your project can be visualized only for invited people or anyone authenticated in the plataform.</p>
           </div>
         </div>
         <div class="row no-gutters">
           <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
           <div class="col-lg-6 my-auto showcase-text">
             <h2>Updated For Bootstrap 4</h2>
-            <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
+            <p class="lead mb-0">Add tasks, assign for those you are able to do and give them a deadline. Don't worry about missing any changes of the project, the coordinator will be notified. If comunication is needed you can count on a discussion forum for general info or focused in a especific subject.</p>
           </div>
         </div>
         <div class="row no-gutters">
