--- a/Report3/home-test/contact.html
+++ b/Report3/home-test/contact.html
@@ -47,7 +47,7 @@
         <div class="col-lg-4 order-lg-1 my-auto showcase-text">
             <h5>Contact Form</h5>
         </div>
-        <div class="col-lg-0 order-lg-1 my-auto showcase-text">
+        <div align="left">
           <form action="action_page.php">
             <label for="fname">First Name</label>
             <input type="text" id="fname" name="firstname" placeholder="Your name.."><p></p>
@@ -55,7 +55,7 @@
             <label for="lname">Last Name</label>
             <input type="text" id="lname" name="lastname" placeholder="Your last name.."><p></p>
 
-             <label for="subject">Subject</label>
+             <label for="subject">Subject</label><p></p>
              <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
 
              <input type="submit" value="Submit">
