--- a/Report3/home-test/index.html
+++ b/Report3/home-test/index.html
@@ -149,10 +149,13 @@ span.psw {
     <!-- Navigation -->
     <nav class="navbar navbar-light bg-light static-top">
       <div class="container">
+      	<img class="img-fluid mb-2" width="50" height="50" src="img/proplanlogo.png" alt="">
         <a class="navbar-brand" href="/home-test/index.html">Home</a>
-        <a class="navbar-brand" href="/home-test/projects.html">Projects</a>
         <a class="navbar-brand" href="/home-test/about.html">About</a>
+        <a class="navbar-brand" href="/home-test/projects.html">Projects</a>
+        <a class="navbar-brand" href="/home-test/faq.html">FAQ</a>
         <a class="navbar-brand" href="/home-test/contact.html">Contact</a>
+        
         <a class="btn btn-primary" href="#" onclick="document.getElementById('id01').style.display='block'">Sign In</a>
       </div>
     </nav>
@@ -203,10 +206,11 @@ window.onclick = function(event) {
       <div class="container">
         <div class="row">
           <div class="col-xl-9 mx-auto">
+          	<img class="img-fluid mb-2" width="350" height="300" src="img/ProPlanimage.png" alt="">
             <h1 class="mb-5">ProPlan is a way of planning your project, getting a wide view of it, wherever you are.</h1>
           </div>
           <div class="col-xl-9 mx-auto">
-          	<h3 class="mb-5">Visualize every project you belong in one place. Get contact with your team. Receive notifications of progress. For free.</h3>
+          	<h4 class="mb-5">Visualize every project you belong in one place. Get contact with your team. Receive notifications of progress. For free.</h4>
           </div>
           <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
             <form>
@@ -214,9 +218,6 @@ window.onclick = function(event) {
                 <!--<div class="col-12 col-md-7 mb-2 mb-md-0">
                   <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
                 </div>-->
-                <div class="col-12 col-md-12">
-                  <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up for ProPlan!</button>	
-                 </div>
                 </div>
               </div>
             </form>
@@ -267,22 +268,22 @@ window.onclick = function(event) {
 
           <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
           <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-            <!-- <h2>Fully Responsive Design</h2> -->
+            <h2>A small sample</h2>
             <p class="lead mb-0">This is an example of a ProPlan project. When creating you can choose the project's name, invite members and set up the privacy settings. This means your project can be visualized only for invited people or anyone authenticated in the plataform.</p>
           </div>
         </div>
         <div class="row no-gutters">
           <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
           <div class="col-lg-6 my-auto showcase-text">
-            <h2>Updated For Bootstrap 4</h2>
-            <p class="lead mb-0">Add tasks, assign for those you are able to do and give them a deadline. Don't worry about missing any changes of the project, the coordinator will be notified. If comunication is needed you can count on a discussion forum for general info or focused in a especific subject.</p>
+            <h2>Features</h2>
+            <p class="lead mb-0">Add tasks, assign for those you are able to do and give them a deadline. Don't worry about missing any changes of the project, the coordinator will be notified.</p>
           </div>
         </div>
         <div class="row no-gutters">
           <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
           <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-            <h2>Easy to Use &amp; Customize</h2>
-            <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
+            <h2>Easy transmission</h2>
+            <p class="lead mb-0">If comunication is needed you can count on a discussion forum for general info or focused in a especific subject.</p>
           </div>
         </div>
       </div>
@@ -299,12 +300,9 @@ window.onclick = function(event) {
           <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
             <form>
               <div class="form-row">
-                <div class="col-12 col-md-9 mb-2 mb-md-0">
-                  <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
-                </div>
-                <div class="col-12 col-md-3">
-                  <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
-                </div>
+                <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
+                  <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up for ProPlan!</button>	
+                 </div>
               </div>
             </form>
           </div>
@@ -319,22 +317,17 @@ window.onclick = function(event) {
           <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
             <ul class="list-inline mb-2">
               <li class="list-inline-item">
-                <a href="#">About</a>
+                <a href="/home-test/about.html">About</a>
               </li>
               <li class="list-inline-item">&sdot;</li>
               <li class="list-inline-item">
-                <a href="#">Contact</a>
+                <a href="faq.html">FAQ</a>
               </li>
               <li class="list-inline-item">&sdot;</li>
               <li class="list-inline-item">
-                <a href="#">Terms of Use</a>
+                <a href="/home-test/contact.html">Contact</a>
               </li>
-              <li class="list-inline-item">&sdot;</li>
-              <li class="list-inline-item">
-                <a href="#">Privacy Policy</a>
-              </li>
-            </ul>
-            <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2018. All Rights Reserved.</p>
+            <p class="text-muted small mb-4 mb-lg-0">&copy; ProPlan 2018. All Rights Reserved.</p>
           </div>
           <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
             <ul class="list-inline mb-0">
