--- a/Report3/home-test/faq.html
+++ b/Report3/home-test/faq.html
@@ -28,7 +28,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-light bg-light static-top">
       <div class="container">
-       <img class="img-fluid mb-2" width="50" height="50" src="img/proplanlogo.png" alt="">
+        <img class="img-fluid mb-2" width="50" height="50" src="img/proplanlogo.png" alt="">
         <a class="navbar-brand" href="/home-test/index.html">Home</a>
         <a class="navbar-brand" href="/home-test/about.html">About</a>
         <a class="navbar-brand" href="/home-test/projects.html">Projects</a>
@@ -38,47 +38,18 @@
         <a class="btn btn-primary" href="#" onclick="document.getElementById('id01').style.display='block'">Sign In</a>
     </nav>
 
-    <!-- About Information -->
+    <!-- FAQ Information -->
     <section class="testimonials text-center bg-light">
       <div class="container">
-        <h2 class="mb-5">About Us</h2>
+        <h2 class="mb-5">FAQ</h2>
         <div class="col-lg-4 order-lg-1 my-auto showcase-text">
-            <p>We are ... </p>
+            <h5>Question 1</h5>
+            <p>Answer 1</p>
           </div>
-          <div class="col-lg-11 order-lg-1 my-auto showcase-text">
-            <h3 center>Our Team</h3>
+          <div class="col-lg-4 order-lg-1 my-auto showcase-text">
+            <h5>Question 2</h5>
+            <p>Answer 2</p>
           </div>
-        <div class="row">
-          <!-- Members -->
-          <div class="col-lg-6">
-            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
-              <h5>Margaret E.</h5>
-              <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p><p></p>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
-              <h5>Fred S.</h5>
-              <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p><p></p>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
-              <h5>Fred S.</h5>
-              <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p><p></p>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
-              <h5>Sarah	W.</h5>
-              <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p><p></p>
-            </div>
-          </div>
-        </div>
       </div>
     </section>
 
