--- a/Report3/home-test/index.html
+++ b/Report3/home-test/index.html
@@ -214,7 +214,7 @@ window.onclick = function(event) {
           </div>
           <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
             <form>
-              <div class="form-row">
+              <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up for ProPlan!</button>
                 <!--<div class="col-12 col-md-7 mb-2 mb-md-0">
                   <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
                 </div>-->
@@ -328,25 +328,6 @@ window.onclick = function(event) {
                 <a href="/home-test/contact.html">Contact</a>
               </li>
             <p class="text-muted small mb-4 mb-lg-0">&copy; ProPlan 2018. All Rights Reserved.</p>
-          </div>
-          <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
-            <ul class="list-inline mb-0">
-              <li class="list-inline-item mr-3">
-                <a href="#">
-                  <i class="fa fa-facebook fa-2x fa-fw"></i>
-                </a>
-              </li>
-              <li class="list-inline-item mr-3">
-                <a href="#">
-                  <i class="fa fa-twitter fa-2x fa-fw"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fa fa-instagram fa-2x fa-fw"></i>
-                </a>
-              </li>
-            </ul>
           </div>
         </div>
       </div>
