--- a/Report3/home-test/index.html
+++ b/Report3/home-test/index.html
@@ -285,7 +285,8 @@ span.psw {
       <label for="psw"><b>Password</b></label>
       <input type="password" placeholder="Enter Password" name="psw" required>
         
-      <button type="submit" class="btn btn-primary">Login</button><fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+      <button type="submit" class="btn btn-primary">Login</button>
+	  <fb:login-button scope="public_profile,email" onlogin="checkLoginState();" style="width: 1108px;text-align: center;">
 </fb:login-button>
 
 <div id="status">
