--- a/Report3/home-test2/about.html
+++ b/Report3/home-test2/about.html
@@ -40,13 +40,20 @@
 
     <!-- About Information -->
     <section class="testimonials text-center bg-light">
+
+
+
+
+
+
+
       <div class="container">
         <h2 class="mb-5">About Us</h2>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-            <p>We are dsads adsad sadsads adsadsa dsadsa dsad sa dsadsa daddsdsa dsa dsa dsa ds ad sa dsa d sa d ad sa d sa d sad sa d sad s dsd sd adsad a ds ad sa dsa d sad sa d sad sadsa dsaddsad sadsaddsds adsad ad ad sad</p>
+            <p>We are dsads adsad sadsads adsadsa dsadsa dsad sa dsadsa daddsdsa dsa dsa dsa ds ad sa dsa d sa d ad sa d sa d sad sa d sad s dsd sd adsad a ds ad sa dsa d sad sa d sad sadsa dsaddsad sadsaddsds adsad ad ad sad   <br /><br /><br /></p>
           </div>
           <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-            <h3 center>Our Team</h3>
+            <h3 >Our Team </h3> <p><br /></p>
           </div>
         <div class="row">
           <!-- Members -->
@@ -57,8 +64,8 @@
               <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p><p></p>
             </div>
           </div>
-          <div class="col-lg-4">
-            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+          <div class="col-lg-3">
+            <div class="testimonial-item mx-auto mb-4 mb-lg-0">
               <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
               <h5>Fred S.</h5>
               <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p><p></p>
@@ -71,7 +78,7 @@
               <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p><p></p>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-3">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
               <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
               <h5>Sarah	W.</h5>
