--- a/Report3/home-test2/contact.html
+++ b/Report3/home-test2/contact.html
@@ -20,7 +20,9 @@
 
     <!-- Custom styles for this template -->
     <link href="css/landing-page.min.css" rel="stylesheet">
-
+    <style type="text/css">
+      
+    </style>
   </head>
 
   <body>
@@ -42,28 +44,90 @@
     <!-- Contact Information -->
 
     <section class="testimonials text-center bg-light">
-      <div class="container">
-        <h2 class="mb-5">Contacts</h2>
-        <div class="col-lg-4 order-lg-1 my-auto showcase-text">
-            <p>Contac us on ... </p>
-        </div>
-        <div class="col-lg-4 order-lg-1 my-auto showcase-text">
-            <h5>Contact Form</h5>
-        </div>
-        <div align="left">
-          <form action="action_page.php">
-            <label for="fname">First Name</label>
-            <input type="text" id="fname" name="firstname" placeholder="Your name.."><p></p>
+      
+<div class="container">
 
-            <label for="lname">Last Name</label>
-            <input type="text" id="lname" name="lastname" placeholder="Your last name.."><p></p>
+            <div class="row">
 
-             <label for="subject">Subject</label><p></p>
-             <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
 
-             <input type="submit" value="Submit">
-          </form>
-        </div>
+
+
+                <div class="col-lg-12 col-lg-offset-2">
+
+                    <h1>Any questions? Contact us!</h1>
+
+                    <p class="lead">Our team is happy to answer your questions!</p>
+
+
+                    <form id="contact-form" method="post" action="contact.php" role="form">
+
+                        <div class="messages"></div>
+
+                        <div class="controls">
+
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="form_name">Firstname *</label>
+                                        <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your firstname *" required="required" data-error="Firstname is required.">
+                                        <div class="help-block with-errors"></div>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="form_lastname">Lastname *</label>
+                                        <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter your lastname *" required="required" data-error="Lastname is required.">
+                                        <div class="help-block with-errors"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="form_email">Email *</label>
+                                        <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter your email *" required="required" data-error="Valid email is required.">
+                                        <div class="help-block with-errors"></div>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="form_phone">Phone</label>
+                                        <input id="form_phone" type="tel" name="phone" class="form-control" placeholder="Please enter your phone">
+                                        <div class="help-block with-errors"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="form_message">Message *</label>
+                                        <textarea id="form_message" name="message" class="form-control" placeholder="Please enter your Message *" rows="4" required="required" data-error="Please,leave us a message."></textarea>
+                                        <div class="help-block with-errors"></div>
+                                    </div>
+                                </div>
+                                <div class="col-md-10 col-lg-8 col-xl-4 mx-auto" >
+                                    <input type="submit" class="btn btn-block btn-lg btn-primary" value="Send message">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <p class="text-muted"><strong>*</strong> These fields are required.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                    </form>
+
+                </div><!-- /.8 -->
+
+            </div> <!-- /.row-->
+
+        </div> <!-- /.container-->
+
+        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <script src="validator.js"></script>
+        <script src="contact.js"></script>
     </section>
 
     <!-- Call to Action -->
