--- a/Report3/home-test/about.html
+++ b/Report3/home-test/about.html
@@ -29,49 +29,56 @@
     <nav class="navbar navbar-light bg-light static-top">
       <div class="container">
        <img class="img-fluid mb-2" width="50" height="50" src="img/proplanlogo.png" alt="">
-        <a class="navbar-brand" href="index.html">Home</a>
-        <a class="navbar-brand" href="about.html">About</a>
-        <a class="navbar-brand" href="projects.html">Projects</a>
-        <a class="navbar-brand" href="faq.html">FAQ</a>
-        <a class="navbar-brand" href="contact.html">Contact</a>
+        <a class="navbar-brand" href="/home-test/index.html">Home</a>
+        <a class="navbar-brand" href="/home-test/about.html">About</a>
+        <a class="navbar-brand" href="/home-test/projects.html">Projects</a>
+        <a class="navbar-brand" href="/home-test/faq.html">FAQ</a>
+        <a class="navbar-brand" href="/home-test/contact.html">Contact</a>
         
         <a class="btn btn-primary" href="#" onclick="document.getElementById('id01').style.display='block'">Sign In</a>
     </nav>
 
     <!-- About Information -->
     <section class="testimonials text-center bg-light">
+
+
+
+
+
+
+
       <div class="container">
         <h2 class="mb-5">About Us</h2>
-        <div class="col-lg-4 order-lg-1 my-auto showcase-text">
-            <p>We are ... </p>
+        <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
+            <p>We are dsads adsad sadsads adsadsa dsadsa dsad sa dsadsa daddsdsa dsa dsa dsa ds ad sa dsa d sa d ad sa d sa d sad sa d sad s dsd sd adsad a ds ad sa dsa d sad sa d sad sadsa dsaddsad sadsaddsds adsad ad ad sad   <br /><br /><br /></p>
           </div>
-          <div class="col-lg-11 order-lg-1 my-auto showcase-text">
-            <h3 center>Our Team</h3>
+          <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
+            <h3 >Our Team </h3> <p><br /></p>
           </div>
         <div class="row">
           <!-- Members -->
-          <div class="col-lg-6">
+          <div class="col-lg-7">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
               <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
               <h5>Margaret E.</h5>
               <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p><p></p>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-3">
+            <div class="testimonial-item mx-auto mb-4 mb-lg-0">
+              <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
+              <h5>Fred S.</h5>
+              <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p><p></p>
+            </div>
+          </div>
+          <div class="col-lg-7">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
               <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
               <h5>Fred S.</h5>
               <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p><p></p>
             </div>
           </div>
-          <div class="col-lg-6">
-            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
-              <h5>Fred S.</h5>
-              <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p><p></p>
-            </div>
-          </div>
-          <div class="col-lg-4">
+          <div class="col-lg-3">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
               <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
               <h5>Sarah	W.</h5>
@@ -93,9 +100,9 @@
           <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
             <form>
               <div class="form-row">
-                <div class="col-12 col-md-9 mb-2 mb-md-0">
+                <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
                   <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up for ProPlan!</button>  
-                </div>
+                 </div>
               </div>
             </form>
           </div>
@@ -110,22 +117,17 @@
           <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
             <ul class="list-inline mb-2">
               <li class="list-inline-item">
-                <a href="#">About</a>
+                <a href="/home-test/about.html">About</a>
               </li>
               <li class="list-inline-item">&sdot;</li>
               <li class="list-inline-item">
-                <a href="#">Contact</a>
+                <a href="faq.html">FAQ</a>
               </li>
               <li class="list-inline-item">&sdot;</li>
               <li class="list-inline-item">
-                <a href="#">Terms of Use</a>
+                <a href="/home-test/contact.html">Contact</a>
               </li>
-              <li class="list-inline-item">&sdot;</li>
-              <li class="list-inline-item">
-                <a href="#">Privacy Policy</a>
-              </li>
-            </ul>
-            <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2018. All Rights Reserved.</p>
+            <p class="text-muted small mb-4 mb-lg-0">&copy; ProPlan 2018. All Rights Reserved.</p>
           </div>
         </div>
       </div>
