--- a/Report3/home-test/projects.html
+++ b/Report3/home-test/projects.html
@@ -47,11 +47,58 @@
         <h2 class="mb-5">Projects</h2>
 		<div class="search-container">
 			<form action="/action_page.php">
-				<input type="text" placeholder="Search Project" name="search_proj">
+				<input type="text" placeholder="Search Project" name="search_proj" size = "80">
 				<button type="submit"><i class="fa fa-search"></i></button>
 			</form>
 	</section>
 	
+	<section>
+	<div class="col-md-10 col-lg-8 col-xl-10 mx-auto">
+	<div class="card-deck">
+		<div class="card">
+			<div class="card-header">
+			<h5 class="card-title">Title of Project</h5>
+			</div>
+			<div class="card-body">
+				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+			<a href="#" class="btn btn-primary">Go somewhere</a>
+			</div>
+			<div class="card-footer">
+				<small class="text-muted">Last updated 3 mins ago</small>
+			</div>
+		</div>
+		<div class="card">
+			<div class="card-header">
+			<h5 class="card-title">Title of Project</h5>
+			</div>
+			<div class="card-body">
+				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+			<a href="#" class="btn btn-primary">Go somewhere</a>
+			</div>
+			<div class="card-footer">
+				<small class="text-muted">Last updated 3 mins ago</small>
+			</div>
+		</div>
+		<div class="card">
+			<div class="card-header">
+			<h5 class="card-title">Title of Project</h5>
+			</div>
+			<div class="card-body">
+				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+			<a href="#" class="btn btn-primary">Go somewhere</a>
+			</div>
+			<div class="card-footer">
+				<small class="text-muted">Last updated 3 mins ago</small>
+			</div>
+		</div>
+	</div></div>
+    </section>
+
+
+	<p><br></br></p> 
+
+	<div class="col-md-10 col-lg-8 col-xl-10 mx-auto">
+	<!-- Project Selection -->
 	<section>
 	<div class="card-deck">
 		<div class="card">
@@ -90,12 +137,14 @@
 				<small class="text-muted">Last updated 3 mins ago</small>
 			</div>
 		</div>
-	</div>
+	</div> 
     </section>
+</div>
+
+
+	<p><br></br></p> 
 	
-	
-	
-	<!-- Call to Action -->
+    <!-- Call to Action -->
     <section class="call-to-action text-white text-center">
       <div class="overlay"></div>
       <div class="container">
@@ -106,9 +155,9 @@
           <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
             <form>
               <div class="form-row">
-                <div class="col-12 col-md-9 mb-2 mb-md-0">
-                  <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up for ProPlan!</button>
-                </div>
+                <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
+                  <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up for ProPlan!</button>	
+                 </div>
               </div>
             </form>
           </div>
@@ -116,30 +165,24 @@
       </div>
     </section>
 
-	
-	    <!-- Footer -->
+    <!-- Footer -->
     <footer class="footer bg-light">
       <div class="container">
         <div class="row">
           <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
             <ul class="list-inline mb-2">
               <li class="list-inline-item">
-                <a href="#">About</a>
+                <a href="/home-test/about.html">About</a>
               </li>
               <li class="list-inline-item">&sdot;</li>
               <li class="list-inline-item">
-                <a href="#">Contact</a>
+                <a href="faq.html">FAQ</a>
               </li>
               <li class="list-inline-item">&sdot;</li>
               <li class="list-inline-item">
-                <a href="#">Terms of Use</a>
+                <a href="/home-test/contact.html">Contact</a>
               </li>
-              <li class="list-inline-item">&sdot;</li>
-              <li class="list-inline-item">
-                <a href="#">Privacy Policy</a>
-              </li>
-            </ul>
-            <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2018. All Rights Reserved.</p>
+            <p class="text-muted small mb-4 mb-lg-0">&copy; ProPlan 2018. All Rights Reserved.</p>
           </div>
         </div>
       </div>
