--- a/Report3/home-test/faq.html
+++ b/Report3/home-test/faq.html
@@ -29,11 +29,11 @@
     <nav class="navbar navbar-light bg-light static-top">
       <div class="container">
         <img class="img-fluid mb-2" width="50" height="50" src="img/proplanlogo.png" alt="">
-        <a class="navbar-brand" href="index.html">Home</a>
-        <a class="navbar-brand" href="about.html">About</a>
-        <a class="navbar-brand" href="projects.html">Projects</a>
-        <a class="navbar-brand" href="faq.html">FAQ</a>
-        <a class="navbar-brand" href="contact.html">Contact</a>
+        <a class="navbar-brand" href="/home-test/index.html">Home</a>
+        <a class="navbar-brand" href="/home-test/about.html">About</a>
+        <a class="navbar-brand" href="/home-test/projects.html">Projects</a>
+        <a class="navbar-brand" href="/home-test/faq.html">FAQ</a>
+        <a class="navbar-brand" href="/home-test/contact.html">Contact</a>
         
         <a class="btn btn-primary" href="#" onclick="document.getElementById('id01').style.display='block'">Sign In</a>
     </nav>
@@ -42,14 +42,18 @@
     <section class="testimonials text-center bg-light">
       <div class="container">
         <h2 class="mb-5">FAQ</h2>
-        <div class="col-lg-4 order-lg-1 my-auto showcase-text">
-            <h5>Question 1</h5>
-            <p>Answer 1</p>
-          </div>
-          <div class="col-lg-4 order-lg-1 my-auto showcase-text">
-            <h5>Question 2</h5>
-            <p>Answer 2</p>
-          </div>
+        <div class="col-lg-12 order-lg-1 my-auto showcase-text">
+
+            <h5> <a href="javascript:toggleElement('a1')"> How can I invite someone for a project? </a> </h5>
+            <p><div id="a1" style="display:none">Answer 1 </div></p>
+            <h5> <a href="javascript:toggleElement('a2')"> How to assign a task for a member? </a> </h5>
+            <p><div id="a2" style="display:none">Answer 2 </div></p>
+            <h5> <a href="javascript:toggleElement('a3')"> Where can I find my notifications? </a> </h5>
+            <p><div id="a3" style="display:none">Answer 3 </div></p>
+            <h5> <a href="javascript:toggleElement('a4')"> Can I deny access to a member of the team?</a> </h5>
+            <p><div id="a4" style="display:none">Answer 4 </div></p>
+
+         </div>
       </div>
     </section>
 
@@ -64,9 +68,9 @@
           <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
             <form>
               <div class="form-row">
-                <div class="col-12 col-md-9 mb-2 mb-md-0">
+                <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
                   <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up for ProPlan!</button>  
-                </div>
+                 </div>
               </div>
             </form>
           </div>
@@ -81,22 +85,17 @@
           <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
             <ul class="list-inline mb-2">
               <li class="list-inline-item">
-                <a href="#">About</a>
+                <a href="/home-test/about.html">About</a>
               </li>
               <li class="list-inline-item">&sdot;</li>
               <li class="list-inline-item">
-                <a href="#">Contact</a>
+                <a href="faq.html">FAQ</a>
               </li>
               <li class="list-inline-item">&sdot;</li>
               <li class="list-inline-item">
-                <a href="#">Terms of Use</a>
+                <a href="/home-test/contact.html">Contact</a>
               </li>
-              <li class="list-inline-item">&sdot;</li>
-              <li class="list-inline-item">
-                <a href="#">Privacy Policy</a>
-              </li>
-            </ul>
-            <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2018. All Rights Reserved.</p>
+            <p class="text-muted small mb-4 mb-lg-0">&copy; ProPlan 2018. All Rights Reserved.</p>
           </div>
         </div>
       </div>
@@ -105,6 +104,7 @@
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="vendor/jquery/faq.js"></script>
 
   </body>
 
