--- a/Report3/home-test/faq.html
+++ b/Report3/home-test/faq.html
@@ -29,14 +29,18 @@
     <nav class="navbar navbar-light bg-light static-top">
       <div class="container">
         <img class="img-fluid mb-2" width="50" height="50" src="img/proplanlogo.png" alt="">
-        <a class="navbar-brand" href="/home-test/index.html">Home</a>
-        <a class="navbar-brand" href="/home-test/about.html">About</a>
-        <a class="navbar-brand" href="/home-test/projects.html">Projects</a>
-        <a class="navbar-brand" href="/home-test/faq.html">FAQ</a>
-        <a class="navbar-brand" href="/home-test/contact.html">Contact</a>
+        <a class="navbar-brand" href="index.html">Home</a>
+        <a class="navbar-brand" href="about.html">About</a>
+        <a class="navbar-brand" href="projects.html">Projects</a>
+        <a class="navbar-brand" href="faq.html">FAQ</a>
+        <a class="navbar-brand" href="contact.html">Contact</a>
         
         <a class="btn btn-primary" href="#" onclick="document.getElementById('id01').style.display='block'">Sign In</a>
     </nav>
+
+      <div class="col-xl-0 mx-auto">
+            <img  width="100%" height="30" src="img/bg-masthead.jpg" alt="">
+    </div>
 
     <!-- FAQ Information -->
     <section class="testimonials text-center bg-light">
