--- a/Report3/home-test/index.html
+++ b/Report3/home-test/index.html
@@ -150,16 +150,16 @@ span.psw {
     <nav class="navbar navbar-light bg-light static-top">
       <div class="container">
       	<img class="img-fluid mb-2" width="50" height="50" src="img/proplanlogo.png" alt="">
-        <a class="navbar-brand" href="/home-test/index.html">Home</a>
-        <a class="navbar-brand" href="/home-test/about.html">About</a>
-        <a class="navbar-brand" href="/home-test/projects.html">Projects</a>
-        <a class="navbar-brand" href="/home-test/faq.html">FAQ</a>
-        <a class="navbar-brand" href="/home-test/contact.html">Contact</a>
+        <a class="navbar-brand" href="index.html">Home</a>
+        <a class="navbar-brand" href="about.html">About</a>
+        <a class="navbar-brand" href="projects.html">Projects</a>
+        <a class="navbar-brand" href="faq.html">FAQ</a>
+        <a class="navbar-brand" href="contact.html">Contact</a>
         
         <a class="btn btn-primary" href="#" onclick="document.getElementById('id01').style.display='block'">Sign In</a>
       </div>
     </nav>
-	
+
 	<div id="id01" class="modal">
   
   <form class="modal-content animate" action="/action_page.php">
