--- a/Report3/home-test/projects.html
+++ b/Report3/home-test/projects.html
@@ -39,6 +39,9 @@
       </div>
     </nav>
 	
+		    <div class="col-xl-0 mx-auto">
+            <img  width="100%" height="30" src="img/bg-masthead.jpg" alt="">
+    </div>
 	
 	<!-- Project Selection -->
 
@@ -50,9 +53,13 @@
 				<input type="text" placeholder="Search Project" name="search_proj" size = "80">
 				<button type="submit"><i class="fa fa-search"></i></button>
 			</form>
+
 	</section>
 	
 	<section>
+	<div>
+		<p><br></p>
+	</div>
 	<div class="col-md-10 col-lg-8 col-xl-10 mx-auto">
 	<div class="card-deck">
 		<div class="card">
