improved myprojects css

--- a/Report3/home-test/index.html
+++ b/Report3/home-test/index.html
@@ -206,11 +206,11 @@ window.onclick = function(event) {
       <div class="container">
         <div class="row">
           <div class="col-xl-9 mx-auto">
-          	<img class="img-fluid mb-2" width="350" height="300" src="img/ProPlanimage.png" alt="">
+          	<img class="img-fluid mb-2" width="400" height="342" src="img/ProPlanimage.svg" alt="">
             <h1 class="mb-5">ProPlan is a way of planning your project, getting a wide view of it, wherever you are.</h1>
           </div>
           <div class="col-xl-9 mx-auto">
-          	<h4 class="mb-5">Visualize every project you belong in one place. Get contact with your team. Receive notifications of progress. For free.</h4>
+          	<h6 class="mb-5">Visualize every project you belong in one place. Get contact with your team. Receive notifications of progress. For free.</h6>
           </div>
           <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
             <form>
