--- a/Report3/home-test/index.html
+++ b/Report3/home-test/index.html
@@ -35,11 +35,9 @@
         <a class="navbar-brand" href="projects.html">Projects</a>
         <a class="navbar-brand" href="faq.html">FAQ</a>
         <a class="navbar-brand" href="contact.html">Contact</a>
-        
         <a class="btn btn-primary" href="#" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Sign In</a>
       </div>
     </nav>
-
   <!-- The Modal -->
 <div id="id01" class="modal">
   
@@ -49,8 +47,6 @@
     </div>
 
     <div class="container">
-
-      <label for="uname"><b>date of birth</b></label>
 
       <label for="name"><b>Name</b></label>
       <input type="text" placeholder="Enter Name" name="name" required>
@@ -65,8 +61,9 @@
       <label for="other"><b>&ensp;&ensp;Other</b></label>
       <input type="radio" name="gender" id="other" value="other"><p></p>
 
-      <label for="country"><b>Country</b></label><select name="country" id="country">
-      <option value="0" label="Select a country … " selected="selected">Select a country …       </option>
+      <label for="country"><b>Country&ensp;&ensp;</b></label><select name="country" id="country">
+
+      <option value="0" label="Select a country" selected="selected">Select a country</option>
       <optgroup id="country-optgroup-Africa" label="Africa">
       <option value="DZ" label="Algeria">Algeria</option>
       <option value="AO" label="Angola">Angola</option>
@@ -362,12 +359,12 @@
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
-          <div class="col-xl-9 mx-auto">
-          	<img class="img-fluid mb-2" width="400" height="342" src="img/ProPlanimage.svg" alt="">
+          <div class="col-xl-10 mx-auto">
+          	<img class="img-fluid mb-2" width="400" height="342" src="img/ProPlanimage.svg" alt=""><p></p>
             <h1 class="mb-5">ProPlan is a way of planning your project, getting a wide view of it, wherever you are.</h1>
-          </div>
+		</div>
           <div class="col-xl-9 mx-auto">
-          	<h6 class="mb-5">Visualize every project you belong in one place. Get contact with your team. Receive notifications of progress. For free.</h6>
+          	<h4 class="mb-5">Visualize every project you belong in one place. Get contact with your team. Receive notifications of progress. For free.</h4>
           </div>
           <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
             <form>
