--- a/Report3/home-test/about.html
+++ b/Report3/home-test/about.html
@@ -14,6 +14,7 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
+    <link href="vendor/font-awesome/css/font-awesome-popup.css" rel="stylesheet" type="text/css">
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
@@ -28,14 +29,14 @@
     <!-- Navigation -->
     <nav class="navbar navbar-light bg-light static-top">
       <div class="container">
-       <img class="img-fluid mb-2" width="50" height="50" src="img/proplanlogo.png" alt="">
+       <a class="icon" href="index.html"></a>
         <a class="navbar-brand" href="/home-test/index.html">Home</a>
         <a class="navbar-brand" href="/home-test/about.html">About</a>
         <a class="navbar-brand" href="/home-test/projects.html">Projects</a>
         <a class="navbar-brand" href="/home-test/faq.html">FAQ</a>
         <a class="navbar-brand" href="/home-test/contact.html">Contact</a>
         
-        <a class="btn btn-primary" href="#" onclick="document.getElementById('id01').style.display='block'">Sign In</a>
+        <a class="btn btn-primary" href="#" onclick="document.getElementById('id02').style.display='block'">Sign In</a>
     </nav>
 
  <div class="col-xl-0 mx-auto">
@@ -44,12 +45,6 @@
 
     <!-- About Information -->
     <section class="testimonials text-center bg-light">
-
-
-
-
-
-
 
       <div class="container">
         <h2 class="mb-5">About Us</h2>
@@ -105,7 +100,7 @@
             <form>
               <div class="form-row">
                 <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-                  <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up for ProPlan!</button>  
+                  <button type="submit" class="btn btn-block btn-lg btn-primary" onclick="document.getElementById('id01').style.display='block'">Sign up for ProPlan!</button>  
                  </div>
               </div>
             </form>
