--- a/Report3/home-test/index.html
+++ b/Report3/home-test/index.html
@@ -29,13 +29,13 @@
     <!-- Navigation -->
     <nav class="navbar navbar-light bg-light static-top">
       <div class="container">
-        <img class="img-fluid mb-2" width="50" height="50" src="img/proplanlogo.png" alt="">
+        <a class="icon" href="index.html"></a>
         <a class="navbar-brand" href="index.html">Home</a>
         <a class="navbar-brand" href="about.html">About</a>
         <a class="navbar-brand" href="projects.html">Projects</a>
         <a class="navbar-brand" href="faq.html">FAQ</a>
         <a class="navbar-brand" href="contact.html">Contact</a>
-        <a class="btn btn-primary" href="#" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Sign In</a>
+        <a class="btn btn-primary" href="#" onclick="document.getElementById('id02').style.display='block'" style="width:auto;">Sign In</a>
       </div>
     </nav>
   <!-- The Modal -->
@@ -47,7 +47,6 @@
     </div>
 
     <div class="container">
-
       <label for="name"><b>Name</b></label>
       <input type="text" placeholder="Enter Name" name="name" required>
 
@@ -341,7 +340,7 @@
       <label for="cpsw"><b>Confirm password</b></label>
       <input type="password" placeholder="Confirm Password" name="cpsw" required>
         
-      <button type="submit">Login</button>
+      <button class="btn btn-block btn-lg btn-primary" type="submit">Login</button>
       <label>
         <input type="checkbox" checked="checked" name="remember"> Remember me
       </label>
@@ -353,6 +352,38 @@
     </div>
   </form>
 </div>
+
+
+ <!-- The Modal -->
+<div id="id02" class="modal">
+  
+  <form class="modal-content animate" action="/action_page2.php">
+    <div class="imgcontainer">
+      <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Modal">&times;</span>
+    </div>
+
+    <div class="container">
+
+      <label for="uname"><b>Username</b></label>
+      <input type="text" placeholder="Enter Username" name="uname" required>
+
+      <label for="psw"><b>Password</b></label>
+      <input type="password" placeholder="Enter Password" name="psw" required>
+        
+      <button class="btn btn-block btn-lg btn-primary" type="submit">Login</button>
+      <label>
+        <input type="checkbox" checked="checked" name="remember"> Remember me
+      </label>
+    </div>
+
+    <div class="container" style="background-color:#f1f1f1">
+      <button type="button" onclick="document.getElementById('id02').style.display='none'" class="cancelbtn">Cancel</button>
+      <span class="psw">Forgot <a href="#">password?</a></span>
+    </div>
+  </form>
+</div>
+
+
 
     <!-- Masthead -->
     <header class="masthead text-white text-center">
@@ -367,14 +398,8 @@
           	<h4 class="mb-5">Visualize every project you belong in one place. Get contact with your team. Receive notifications of progress. For free.</h4>
           </div>
           <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-            <form>
-              <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up for ProPlan!</button>
-                <!--<div class="col-12 col-md-7 mb-2 mb-md-0">
-                  <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
-                </div>-->
-                </div>
-              </div>
-            </form>
+              <button type="submit" class="btn btn-block btn-lg btn-primary" onclick="document.getElementById('id01').style.display='block'" >Sign up for ProPlan!</button>
+            </div>
           </div>
         </div>
       </div>
@@ -452,13 +477,11 @@
             <h2 class="mb-4">Ready to get started? Sign up now!</h2>
           </div>
           <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-            <form>
               <div class="form-row">
                 <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-                  <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up for ProPlan!</button>	
+                  <button type="submit" class="btn btn-block btn-lg btn-primary" onclick="document.getElementById('id01').style.display='block'">Sign up for ProPlan!</button>	
                  </div>
               </div>
-            </form>
           </div>
         </div>
       </div>
@@ -489,6 +512,7 @@
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/jquery/popup.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   </body>
