--- a/Report3/home-test/projects.html
+++ b/Report3/home-test/projects.html
@@ -14,6 +14,7 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
+     <link href="vendor/font-awesome/css/font-awesome-popup.css" rel="stylesheet" type="text/css">
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
@@ -28,7 +29,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-light bg-light static-top">
       <div class="container">
-        <img class="img-fluid mb-2" width="50" height="50" src="img/proplanlogo.png" alt="">
+        <a class="icon" href="index.html"></a>
         <a class="navbar-brand" href="index.html">Home</a>
         <a class="navbar-brand" href="about.html">About</a>
         <a class="navbar-brand" href="projects.html">Projects</a>
@@ -36,10 +37,9 @@
         <a class="navbar-brand" href="contact.html">Contact</a>
         
         <a class="btn btn-primary" href="#" onclick="document.getElementById('id01').style.display='block'">Sign In</a>
-      </div>
     </nav>
-	
-		    <div class="col-xl-0 mx-auto">
+
+      <div class="col-xl-0 mx-auto">
             <img  width="100%" height="30" src="img/bg-masthead.jpg" alt="">
     </div>
 	
@@ -50,8 +50,8 @@
         <h2 class="mb-5">Projects</h2>
 		<div class="search-container">
 			<form action="/action_page.php">
-				<input type="text" placeholder="Search Project" name="search_proj" size = "80">
-				<button type="submit"><i class="fa fa-search"></i></button>
+				<input type="text" class="search" placeholder="Search Project" name="search_proj" size = "10">
+				<button type="submit" class= "search"><i class="fa fa-search"></i></button>
 			</form>
 
 	</section>
@@ -163,7 +163,7 @@
             <form>
               <div class="form-row">
                 <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-                  <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up for ProPlan!</button>	
+                  <button type="submit" class="btn btn-block btn-lg btn-primary" onclick="document.getElementById('id02').style.display='block'">Sign up for ProPlan!</button>	
                  </div>
               </div>
             </form>
